refactor UseStreamDumper to use getFirst() for improved readability